--- a/game.html
+++ b/game.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <script>
-        console.log("Hello World");
-        </script>
+        function getComputerChoice (play) {
+            const randomIndex = Math.floor(Math.random() * play.length);
+            const item= move[randomIndex];
+            return item;
+        }
+        const move= [ "Rock", "Paper", "Scissors"];
+        const result=getComputerChoice(move);
+        console.log( getComputerChoice(move));
+     
+ 
+    const playerSelection = "rock";
+    const computerSelection = getComputerChoice();
+    console.log(playRound(playerSelection, computerSelection));
+     </script>
 </body>
 </html>
