Identify the problems

--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
             case playerSelection.toLowerCase("paper") && computerSelection.toLowerCase("scissors"):
             console.log("You lose Scissors beat Paper")
             break;
-            default: "error"
+            default: "error";
         }
      }
     
