--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
         const result=getComputerChoice(move);
         
      function playRound( playerSelection, computerSelection){
-        switch (playRound){ 
+        switch (playerSelection, computerSelection){ 
             case playerSelection.toLowerCase("Rock") && computerSelection.toLowerCase("Scissors"):
             console.log("You win Rock beats Scissors")
             break;
@@ -48,10 +48,9 @@
             default: "error";
         }
      }
-    
     const playerSelection="paper"
     const computerSelection = getComputerChoice(move);
-    console.log(playRound(playerSelection, computerSelection));
+    return playRound;
      </script>
 </body>
 </html>
