Change the scenarios for Tie Game into one

--- a/game.html
+++ b/game.html
@@ -11,13 +11,16 @@
         function getComputerChoice (play) {
             const randomIndex = Math.floor(Math.random() * play.length);
             const item= move[randomIndex];
-            return item;
+           return item;
         }
         const move= [ "Rock", "Paper", "Scissors"];
         const result=getComputerChoice(move);
         
-     function playRound( playerSelection, computerSelection){
+    function playRound( playerSelection, computerSelection){
+        computerSelection=result;
         switch (playerSelection && computerSelection){ 
+            case playerSelection == computerSelection: "Tie"
+            break;
             case playerSelection.toLowerCase("Rock") && computerSelection.toLowerCase("Scissors"):
             console.log("You win Rock beats Scissors")
             break;
@@ -30,25 +33,15 @@
             case playerSelection.toLowerCase("Scissors") && computerSelection.toLowerCase("Paper"):
             console.log ("You win Scissors beat Paper")
             break;
-            case playerSelection.toLowerCase("Rock") && computerSelection.toLowerCase("Rock"):
-            console.log("Draw")
-            break;
-            case playerSelection.toLowerCase("Scissors") && computerSelection.toLowerCase("Scissors"):
-            console.log ("Draw")
-            break;
-            case playerSelection.toLowerCase("paper") && computerSelection.toLowerCase("paper"):
-            console.log ("Draw")
-            break;
             case playerSelection.toLowerCase("paper") && computerSelection.toLowerCase("rock"):
             console.log ("You win Paper beats Rock")
             break;
             case playerSelection.toLowerCase("paper") && computerSelection.toLowerCase("scissors"):
             console.log("You lose Scissors beat Paper")
             break;
-            default: "error";
         }
      }
-    const playerSelection="paper"
+     const playerSelection="paper"
     const computerSelection = getComputerChoice(move);
     console.log (playRound(playerSelection, computerSelection));
      </script>
