--- a/game.html
+++ b/game.html
@@ -9,7 +9,9 @@
 <body>
     <script>
         const moves= [ "Rock", "Paper", "Scissors"];
-        
+        function getComputerchoice () {
+            Math.floor (Math.random ()* moves.length);
+        }
 
         
      </script>
