--- a/game.html
+++ b/game.html
@@ -7,13 +7,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script>
-        const moves= [ "Rock", "Paper", "Scissors"];
-        function getComputerchoice (moves) {
-          return moves[Math.floor (Math.random ()* moves.length)];
-        }
-    let playerSelection= prompt("Choose Rock, Paper or Scissors", "Rock").toLowerCase();
-     console.log(playerSelection);
+    <script src="/main.js">
+       
      </script>
 </body>
 </html>
