--- a/game.html
+++ b/game.html
@@ -7,8 +7,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="/main.js">
+    <script src="main.js">
+ </script>
+   
        
-     </script>
+     
 </body>
 </html>
