--- a/game.html
+++ b/game.html
@@ -7,8 +7,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="main.js">
- </script>
+<button>Rock</button>
+<button>Paper</button>
+<button>Scissors</button>
+<script src="main.js">
+</script>
    
        
      
