--- a/game.html
+++ b/game.html
@@ -7,9 +7,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<button>Rock</button>
-<button>Paper</button>
-<button>Scissors</button>
+<button value="rock">Rock</button>
+<button value="paper">Paper</button>
+<button value="scissors">Scissors</button>
 <script src="main.js">
 </script>
    
