--- a/game.html
+++ b/game.html
@@ -7,9 +7,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<button value="rock">Rock</button>
-<button value="paper">Paper</button>
-<button value="scissors">Scissors</button>
+<button id="1" value="rock">Rock</button>
+<button id="2" value="paper">Paper</button>
+<button id="3" value="scissors">Scissors</button>
 <script src="main.js">
 </script>
    
