--- a/game.html
+++ b/game.html
@@ -7,9 +7,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<button id="1" value="rock">Rock</button>
-<button id="2" value="paper">Paper</button>
-<button id="3" value="scissors">Scissors</button>
+<div class="container"> 
+    <button id="1" value="rock">Rock</button>
+    <button id="2" value="paper">Paper</button>
+    <button id="3" value="scissors">Scissors</button>
+</div>
 <script src="main.js">
 </script>
    
