--- a/game.html
+++ b/game.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="/styles.css"/> 
 </head>
 <body>
 <div class="score"></div>
-<h1 class="ties">TIes:0</h1>
+<h1 class="ties">Ties:0</h1>
     <div class="winners"></div>
     <h1 class="winners"></h1>
     <button class="reset" onClick="resetGame"> Play Again?</button>
+<div class="playerSelection"></div>
+<h3 class="playerChoice"></h3>
+<h3 class="playerScore"></h3>
+<div class="playerImgs"></div>
+<img src="/images/rock.webp" alt="Rock" class="pImg" id="rock">
+<img src="/images/scissors.webp" alt="Scissors" class="pImg" id="scissors">
+<img src="/images/paper.jpeg" alt="Paper" class="pImg" id="paper">
 <script src="main.js">
 </script>
    
