--- a/game.html
+++ b/game.html
@@ -12,12 +12,21 @@
     <h1 class="winners"></h1>
     <button class="reset" onClick="resetGame"> Play Again?</button>
 <div class="playerSelection"></div>
-<h3 class="playerChoice"></h3>
-<h3 class="playerScore"></h3>
-<div class="playerImgs"></div>
-<img src="/images/rock.webp" alt="Rock" class="pImg" id="rock">
-<img src="/images/scissors.webp" alt="Scissors" class="pImg" id="scissors">
-<img src="/images/paper.jpeg" alt="Paper" class="pImg" id="paper">
+    <h3 class="playerChoice"></h3>
+    <h3 class="playerScore"></h3>
+    <div class="playerImgs"></div>
+        <img src="./images/rock.png" alt="Rock" class="pImg" id="rock">
+        <img src="./images/scissors.png" alt="Scissors" class="pImg" id="scissors">
+        <img src="./images/paper.png" alt="Paper" class="pImg" id="paper">
+
+    <div class="computerSelection"></div>
+    <h3 class="computerChoice"></h3>
+    <h3 class="computerScore"></h3>
+    <div class="computerImgs"></div>
+        <img src="./images/rock.png" alt="Rock" class="rock">
+        <img src="./images/scissors.png" alt="Scissors" class="scissors" >
+        <img src="./images/paper.png" alt="Paper" class="paper" >
+
 <script src="main.js">
 </script>
    
