Change the height of paper

--- a/game.html
+++ b/game.html
@@ -15,17 +15,17 @@
     <h3 class="playerChoice"></h3>
     <h3 class="playerScore"></h3>
     <div class="playerImgs"></div>
-        <img src="./images/rock.png" alt="Rock" class="pImg" id="rock">
-        <img src="./images/scissors.png" alt="Scissors" class="pImg" id="scissors">
-        <img src="./images/paper.png" alt="Paper" class="pImg" id="paper">
+        <img width="200px" src="./images/rock.png" alt="Rock" class="pImg" id="rock">
+        <img width="200px" src="./images/scissors.png" alt="Scissors" class="pImg" id="scissors">
+        <img width="200px" height="120px" src="./images/paper.png" alt="Paper" class="pImg" id="paper">
 
     <div class="computerSelection"></div>
     <h3 class="computerChoice"></h3>
     <h3 class="computerScore"></h3>
     <div class="computerImgs"></div>
-        <img src="./images/rock.png" alt="Rock" class="rock">
-        <img src="./images/scissors.png" alt="Scissors" class="scissors" >
-        <img src="./images/paper.png" alt="Paper" class="paper" >
+        <img width="200px" src="./images/rock.png" alt="Rock" class="rock">
+        <img width="200px" src="./images/scissors.png" alt="Scissors" class="scissors" >
+        <img width="200px" height="120px" src="./images/paper.png" alt="Paper" class="paper" >
 
 <script src="main.js">
 </script>
